--- a/css/reqpage.scss
+++ b/css/reqpage.scss
@@ -1,18 +1,32 @@
-body{
-    background-color: #f5f5f5;
-}
 .request{
-    overflow-x: hidden;
-    overflow-y:scroll;
+    
+}
+.req-content{
+    max-height: 100%;
+    
+}
+.req-user{
+    list-style-type:none;
+    li:hover{
+        background-color: chocolate;
+    }
 }
 
-.req-nav{
-    .nav-head{
-        background-color: chocolate;
-        width: 100%;
-    }
-    width: 25%  !important;
-    height: 100%;
-    background-color: #f5f5f5;
-    
+.date-proposal{
+    display: inline;
+    position: absolute;
+    top: 50px;
+    right: 50px;
+}
+
+.button-acc{
+    float: right;
+}
+
+.proposal-footer{
+    position: absolute;
+    width: 100%;
+    bottom: 0px;
+    left: 0;
+    padding: 20px;
 }
