--- a/css/login.scss
+++ b/css/login.scss
@@ -6,4 +6,11 @@
     height: 100vh;
   }
 
-  
+#loading{
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background: url(../assets/img/loading.gif) no-repeat center center;
+  z-index: 200;
+  display: none;
+}  
